# Stochastic_Regularizer_Research

./: README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile
random_noise_networks/data_loaders_generator/: __init__.py  data_loaders_generator_base.py  mnist_data_loaders_generator.py
random_noise_networks/experiment_objective/: __init__.py  experiment_objective.py  experiment_objective_base.py
random_noise_networks/metrics/: accuraccy.py  metric_base.py
random_noise_networks/models/: __init__.py  dropout_perceptron.py  perceptron.py  random_noise_perceptron.py
random_noise_networks/random_noise/: __init__.py  random_noise.py  random_scaler.py
test/random_noise/: test_random_noise.py  test_random_scaler.py
