[tool.poetry]
name = "Random_noise_NN_research"
version = "0.1.0"
description = ""
authors = ["PKramek <peterkramek@gmail.com>"]
packages = [{include = "Random_noise_NN_research"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.1.2"
pytest = "^7.4.3"
scipy = "^1.11.4"
optuna = "^3.5.0"
torchvision = "^0.16.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"
notebook = "^7.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
